vulkan.dds replaced by logo.dds

--- a/12-alpha-blend/12-alpha-blend.vcxproj
+++ b/12-alpha-blend/12-alpha-blend.vcxproj
@@ -51,10 +51,10 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="vulkan.dds" />
+    <ClCompile Include="12-alpha-blend.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="12-alpha-blend.cpp" />
+    <Image Include="logo.dds" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
