--- a/06-texture/Makefile
+++ b/06-texture/Makefile
@@ -1,8 +1,10 @@
-include ../makeconf
+include ../Makeshared.mk
 
-default: 06-texture passthrough.o multitexture.o
+default:
+	06-texture passthrough.o multitexture.o
 
-06-texture: 06-texture.o $(FRAMEWORK_OBJS)
+06-texture:
+	06-texture.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 clean:
