--- a/08-texture-cube/Makefile
+++ b/08-texture-cube/Makefile
@@ -1,4 +1,4 @@
-include ../makeconf
+include ../Makeshared.mk
 
 ifeq ($(DEBUG), 1)
 	QUADRIC=quadricd
@@ -8,9 +8,11 @@ endif
 
 LDFLAGS2=$(LIB_DIR) -lpthread -lxcb -lvulkan -l$(QUADRIC) -l$(MAGMA)
 
-default: 08-texture-cube transform.o envmap.o
+default:
+	08-texture-cube transform.o envmap.o
 
-08-texture-cube: 08-texture-cube.o $(FRAMEWORK_OBJS)
+08-texture-cube:
+	08-texture-cube.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS2)
 
 clean:
