--- a/10.b-render-to-msaa-texture/Makefile
+++ b/10.b-render-to-msaa-texture/Makefile
@@ -1,8 +1,10 @@
-include ../makeconf
+include ../Makeshared.mk
 
-default: 10b-render-to-msaa-texture passthrough.o triangle.o fill.o tex.o
+default:
+	10b-render-to-msaa-texture passthrough.o triangle.o fill.o tex.o
 
-10b-render-to-msaa-texture: 10.b-render-to-msaa-texture.o $(FRAMEWORK_OBJS)
+10b-render-to-msaa-texture:
+	10.b-render-to-msaa-texture.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 clean:
