--- a/11-occlusion-query/Makefile
+++ b/11-occlusion-query/Makefile
@@ -1,4 +1,4 @@
-include ../makeconf
+include ../Makeshared.mk
 
 ifeq ($(DEBUG), 1)
 	QUADRIC=quadricd
@@ -8,9 +8,11 @@ endif
 
 LDFLAGS2=$(LIB_DIR) -lpthread -lxcb -lvulkan -l$(QUADRIC) -l$(MAGMA)
 
-default: 11-occlusion-query transform.o fill.o
+default:
+	11-occlusion-query transform.o fill.o
 
-11-occlusion-query: 11-occlusion-query.o $(FRAMEWORK_OBJS)
+11-occlusion-query:
+	11-occlusion-query.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS2)
 
 clean:
