--- a/17-shadertoy/Makefile
+++ b/17-shadertoy/Makefile
@@ -1,8 +1,10 @@
-include ../makeconf
+include ../Makeshared.mk
 
-default: 17-shadertoy quad.o shader.o
+default:
+	17-shadertoy quad.o shader.o
 
-17-shadertoy: 17-shadertoy.o $(FRAMEWORK_OBJS)
+17-shadertoy:
+	17-shadertoy.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS) -lshaderc_combined
 
 clean:
