--- a/10.a-render-to-texture/Makefile
+++ b/10.a-render-to-texture/Makefile
@@ -1,8 +1,10 @@
-include ../makeconf
+include ../Makeshared.mk
 
-default: 10a-render-to-texture passthrough.o triangle.o fill.o tex.o
+default:
+	10a-render-to-texture passthrough.o triangle.o fill.o tex.o
 
-10a-render-to-texture: 10.a-render-to-texture.o $(FRAMEWORK_OBJS)
+10a-render-to-texture:
+	10.a-render-to-texture.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 clean:
