--- a/16-immediate-mode/Makefile
+++ b/16-immediate-mode/Makefile
@@ -1,6 +1,7 @@
-include ../makeconf
+include ../Makeshared.mk
 
-16-immediate-mode: 16-immediate-mode.o $(FRAMEWORK_OBJS)
+16-immediate-mode:
+	16-immediate-mode.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 clean:
