--- a/03-vertex-buffer/Makefile
+++ b/03-vertex-buffer/Makefile
@@ -1,14 +1,13 @@
 include ../Makeshared.mk
 
-default:
-	03-vertex-buffer passthrough.o fill.o
+default: 03-vertex-buffer shaders
 
-03-vertex-buffer:
-	03-vertex-buffer.o $(FRAMEWORK_OBJS)
+03-vertex-buffer: 03-vertex-buffer.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
+
+shaders: passthrough.o fill.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
 	@find $(FRAMEWORK) -iregex '.*\.\(d\|o\)' -delete
 	@rm -rf 03-vertex-buffer
-
