--- a/06-texture/Makefile
+++ b/06-texture/Makefile
@@ -1,14 +1,13 @@
 include ../Makeshared.mk
 
-default:
-	06-texture passthrough.o multitexture.o
+default: 06-texture shaders
 
-06-texture:
-	06-texture.o $(FRAMEWORK_OBJS)
+06-texture: 06-texture.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
+
+shaders: passthrough.o multitexture.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
 	@find $(FRAMEWORK) -iregex '.*\.\(d\|o\)' -delete
 	@rm -rf 06-texture
-
