--- a/07-texture-array/Makefile
+++ b/07-texture-array/Makefile
@@ -1,22 +1,17 @@
 include ../Makeshared.mk
 
-ifeq ($(DEBUG), 1)
-	QUADRIC=quadricd
-else
-	QUADRIC=quadric
-endif
+LDFLAGS2=-l$(QUADRIC) $(LDFLAGS)
 
-LDFLAGS2=$(LIB_DIR) -lpthread -lxcb -lvulkan -l$(QUADRIC) -l$(MAGMA)
+default: 07-texture-array shaders
 
-default:
-	07-texture-array transform.o textureArray.o
-
-07-texture-array:
-	07-texture-array.o $(FRAMEWORK_OBJS)
+07-texture-array: 07-texture-array.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS2)
+
+shaders: transform.o textureArray.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
 	@find $(FRAMEWORK) -iregex '.*\.\(d\|o\)' -delete
 	@rm -rf 07-texture-array
+
 
