--- a/10.b-render-to-msaa-texture/Makefile
+++ b/10.b-render-to-msaa-texture/Makefile
@@ -1,11 +1,11 @@
 include ../Makeshared.mk
 
-default:
-	10b-render-to-msaa-texture passthrough.o triangle.o fill.o tex.o
+default: 10b-render-to-msaa-texture shaders
 
-10b-render-to-msaa-texture:
-	10.b-render-to-msaa-texture.o $(FRAMEWORK_OBJS)
+10b-render-to-msaa-texture: 10.b-render-to-msaa-texture.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
+
+shaders: passthrough.o triangle.o fill.o tex.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
