--- a/13-specialization/Makefile
+++ b/13-specialization/Makefile
@@ -1,19 +1,13 @@
 include ../Makeshared.mk
 
-ifeq ($(DEBUG), 1)
-	QUADRIC=quadricd
-else
-	QUADRIC=quadric
-endif
+LDFLAGS2=-l$(QUADRIC) $(LDFLAGS)
 
-LDFLAGS2=$(LIB_DIR) -lpthread -lxcb -lvulkan -l$(QUADRIC) -l$(MAGMA)
+default: 13-specialization shaders
 
-default:
-	13-specialization transform.o specialized.o
-
-13-specialization:
-	13-specialization.o $(FRAMEWORK_OBJS)
+13-specialization: 13-specialization.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS2)
+
+shaders: transform.o specialized.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
