--- a/14-pushconstants/Makefile
+++ b/14-pushconstants/Makefile
@@ -1,11 +1,11 @@
 include ../Makeshared.mk
 
-default:
-	14-pushconstants passthrough.o fill.o
+default: 14-pushconstants shaders
 
-14-pushconstants:
-	14-pushconstants.o $(FRAMEWORK_OBJS)
+14-pushconstants: 14-pushconstants.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
+
+shaders: passthrough.o fill.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
