--- a/17-shadertoy/Makefile
+++ b/17-shadertoy/Makefile
@@ -1,11 +1,11 @@
 include ../Makeshared.mk
 
-default:
-	17-shadertoy quad.o shader.o
+default: 17-shadertoy shaders
 
-17-shadertoy:
-	17-shadertoy.o $(FRAMEWORK_OBJS)
+17-shadertoy: 17-shadertoy.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS) -lshaderc_combined
+
+shaders: quad.o shader.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
