--- a/05-mesh/Makefile
+++ b/05-mesh/Makefile
@@ -1,22 +1,15 @@
 include ../Makeshared.mk
 
-ifeq ($(DEBUG), 1)
-	QUADRIC=quadricd
-else
-	QUADRIC=quadric
-endif
+LDFLAGS2=-l$(QUADRIC) $(LDFLAGS)
 
-LDFLAGS2=$(LIB_DIR) -lpthread -lxcb -lvulkan -l$(QUADRIC) -l$(MAGMA)
+default: 05-mesh shaders
 
-default:
-	05-mesh transform.o normal.o
-
-05-mesh:
-	05-mesh.o $(FRAMEWORK_OBJS)
+05-mesh: 05-mesh.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS2)
+
+shaders: transform.o normal.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
 	@find $(FRAMEWORK) -iregex '.*\.\(d\|o\)' -delete
 	@rm -rf 05-mesh
-
