--- a/08-texture-cube/Makefile
+++ b/08-texture-cube/Makefile
@@ -1,19 +1,13 @@
 include ../Makeshared.mk
 
-ifeq ($(DEBUG), 1)
-	QUADRIC=quadricd
-else
-	QUADRIC=quadric
-endif
+LDFLAGS2=-l$(QUADRIC) $(LDFLAGS)
 
-LDFLAGS2=$(LIB_DIR) -lpthread -lxcb -lvulkan -l$(QUADRIC) -l$(MAGMA)
+default: 08-texture-cube shaders
 
-default:
-	08-texture-cube transform.o envmap.o
-
-08-texture-cube:
-	08-texture-cube.o $(FRAMEWORK_OBJS)
+08-texture-cube: 08-texture-cube.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS2)
+
+shaders: transform.o envmap.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
