--- a/09-texture-volume/Makefile
+++ b/09-texture-volume/Makefile
@@ -1,11 +1,11 @@
 include ../Makeshared.mk
 
-default:
-	09-texture-volume quad.o raycast.o
+default: 09-texture-volume shaders
 
-09-texture-volume:
-	09-texture-volume.o $(FRAMEWORK_OBJS)
+09-texture-volume: 09-texture-volume.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
+
+shaders: quad.o raycast.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
