--- a/10.a-render-to-texture/Makefile
+++ b/10.a-render-to-texture/Makefile
@@ -1,11 +1,11 @@
 include ../Makeshared.mk
 
-default:
-	10a-render-to-texture passthrough.o triangle.o fill.o tex.o
+default: 10a-render-to-texture shaders
 
-10a-render-to-texture:
-	10.a-render-to-texture.o $(FRAMEWORK_OBJS)
+10a-render-to-texture: 10.a-render-to-texture.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
+
+shaders: passthrough.o triangle.o fill.o tex.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
