--- a/12-alpha-blend/Makefile
+++ b/12-alpha-blend/Makefile
@@ -1,19 +1,13 @@
 include ../Makeshared.mk
 
-ifeq ($(DEBUG), 1)
-	QUADRIC=quadricd
-else
-	QUADRIC=quadric
-endif
+LDFLAGS2=-l$(QUADRIC) $(LDFLAGS)
 
-LDFLAGS2=$(LIB_DIR) -lpthread -lxcb -lvulkan -l$(QUADRIC) -l$(MAGMA)
+default: 12-alpha-blend shaders
 
-default:
-	12-alpha-blend transform.o texture.o
-
-12-alpha-blend:
-	12-alpha-blend.o $(FRAMEWORK_OBJS)
+12-alpha-blend: 12-alpha-blend.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS2)
+
+shaders: transform.o texture.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
