--- a/15-particles/Makefile
+++ b/15-particles/Makefile
@@ -1,11 +1,11 @@
 include ../Makeshared.mk
 
-default:
-	15-particles pointSize.o particle.o particleNeg.o
+default: 15-particles shaders
 
-15-particles:
-	15-particles.o particlesystem.o $(FRAMEWORK_OBJS)
+15-particles: 15-particles.o particlesystem.o $(FRAMEWORK_OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
+
+shaders: pointSize.o particle.o particleNeg.o
 
 clean:
 	@find . -iregex '.*\.\(d\|o\)' -delete
